# CBS-2020

./: CMakeLists.txt  README.md  agent.cpp  agent.h  agents.cpp  agents.h  call-multirobot.py  call_multirobot.py  constr.h  ctNode.cpp  ctNode.h  ctSolution.cpp  ctSolution.h  main.cpp  map.cpp  map.h  search.cpp  search.h  searchNode.h  try-multirobot.cpp  try_multirobot.cpp
examples/: small.scen
